istio/nodebook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodebook-deployment
  labels:
    app: nodebook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodebook
  template:
    metadata:
      labels:
        app: nodebook
        version: v2
    spec:
      containers:
      - name: nodebook
        image: hzw/nodebook:v2
        ports:
        - containerPort: 3000
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
