istio/notebook-istio-deplyment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodebook
  labels:
    app: nodebook
spec:
  ports:
  - protocol: TCP
    port: 3000
    name: http-nodebook
    targetPort: 3000
  type: LoadBalancer
  selector:
    app: nodebook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodebook-v3
  labels:
    app: nodebook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodebook  
  template:
    metadata:
      labels:
        app: nodebook
        version: v3
    spec:
      containers:
      - name: nodebook
        image: hzw/nodebook:v3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodebook-v4
  labels:
    app: nodebook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodebook
  template:
    metadata:
      labels:
        app: nodebook
        version: v4
    spec:
      containers:
      - name: nodebook
        image: hzw/nodebook:v4
