istio/nodebook-service-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodebook
spec:
  hosts:
  - "*" 
  gateways:
  - nodebook-gateway
  http:
  - match:
    - headers:
        app-ver:
          exact: v3
    fault:
      delay:
        percent: 100
        fixedDelay: 2s
    route:
    - destination:
        host: nodebook
        subset: v3
  - route:
    - destination:
        host: nodebook
        subset: v4
