istio/nodebook-service-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodebook
spec:
  hosts:
  - "*" 
  gateways:
  - nodebook-gateway
  http:
  - match:
    - headers:
        app-ver:
          exact: v3
    route:
    - destination:
        host: nodebook
        subset: v3
    timeout: 1s
  - route:
    - destination:
        host: nodebook
        subset: v4
